add script file

--- a/index.html
+++ b/index.html
@@ -61,42 +61,42 @@
   <section class="features-section reveal" id="features">
     <h2 class="features-title">Features</h2>
     <div class="features-grid">
-      <div class="feature-card card-orange reveal">
+      <div class="feature-card card-orange reveal" style="--card-index:0">
         <div class="feature-icon"><i class="fas fa-bolt"></i></div>
         <div class="feature-title">Lightning Fast</div>
         <div class="feature-desc">Optimized for speed and smooth transitions, your users will love the snappy experience.</div>
       </div>
-      <div class="feature-card card-pink reveal">
+      <div class="feature-card card-pink reveal" style="--card-index:1">
         <div class="feature-icon"><i class="fas fa-palette"></i></div>
         <div class="feature-title">Vibrant Colors</div>
         <div class="feature-desc">A bright, cheerful palette and beautiful gradients make your site stand out.</div>
       </div>
-      <div class="feature-card card-teal reveal">
+      <div class="feature-card card-teal reveal" style="--card-index:2">
         <div class="feature-icon"><i class="fas fa-mobile-alt"></i></div>
         <div class="feature-title">Fully Responsive</div>
         <div class="feature-desc">Looks amazing on any device, from mobile to desktop, with a fluid layout.</div>
       </div>
-      <div class="feature-card card-purple reveal">
+      <div class="feature-card card-purple reveal" style="--card-index:3">
         <div class="feature-icon"><i class="fas fa-magic"></i></div>
         <div class="feature-title">Smooth Animations</div>
         <div class="feature-desc">Subtle, modern animations and hover effects for a delightful user experience.</div>
       </div>
-      <div class="feature-card card-blue reveal">
+      <div class="feature-card card-blue reveal" style="--card-index:4">
         <div class="feature-icon"><i class="fas fa-shield-alt"></i></div>
         <div class="feature-title">Secure & Reliable</div>
         <div class="feature-desc">Your data and experience are protected with best-in-class security and reliability.</div>
       </div>
-      <div class="feature-card card-green reveal">
+      <div class="feature-card card-green reveal" style="--card-index:5">
         <div class="feature-icon"><i class="fas fa-leaf"></i></div>
         <div class="feature-title">Eco Friendly</div>
         <div class="feature-desc">Optimized for low resource usage and a minimal carbon footprint.</div>
       </div>
-      <div class="feature-card card-yellow reveal">
+      <div class="feature-card card-yellow reveal" style="--card-index:6">
         <div class="feature-icon"><i class="fas fa-sun"></i></div>
         <div class="feature-title">Always Bright</div>
         <div class="feature-desc">Enjoy a cheerful, uplifting design that keeps your site feeling positive and fresh.</div>
       </div>
-      <div class="feature-card card-red reveal">
+      <div class="feature-card card-red reveal" style="--card-index:7">
         <div class="feature-icon"><i class="fas fa-heart"></i></div>
         <div class="feature-title">Loved by Users</div>
         <div class="feature-desc">Designed with care and attention to detail for a delightful user experience.</div>
